chore: 깃 풀 컨플릭트 해결